--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -386,7 +386,8 @@
 				</li>
 				
 				<div>
-					<input type="submit" value="Log In" style="padding: 0px; height: 3vw; width: 7vw; color: saddlebrown;">
+					<!-- <input type="submit" value="Log In" style="padding: 0px; height: 3vw; width: 7vw; color: saddlebrown;"> -->
+				    <input type="submit" value="Log In" class="btn btn-info btn-sm"/> 
 				</div>
 		</form>
 </div>
