Admin Panel Changes v2.2

--- a/public/templates/addLocation.html
+++ b/public/templates/addLocation.html
@@ -88,7 +88,7 @@
 								      <div class="col-sm-2">
 								        <select class="form-control" ng-model="newLocation.startingTime" ng-options="x for x in startingTime"></select>
 								      </div>
-								      <label class="control-label col-sm-2" for="pwd">Starting Time:</label>
+								      <label class="control-label col-sm-2" for="pwd">Closing Time:</label>
 								      <div class="col-sm-2">
 								        <select class="form-control" ng-model="newLocation.closingTime" ng-options="x for x in closingTime"></select>
 								      </div>
