Admin Panel User Details Addition v2.3

--- a/public/templates/addLocation.html
+++ b/public/templates/addLocation.html
@@ -28,6 +28,10 @@
                         </li>
                         
                         <li>
+                            <a href="#user" style="font-family : Segoe UI;"><i class="fa fa-plus-square fa-fw"></i> User Details</a>
+                        </li>
+                        
+                        <li>
                             <a href="#/" style="font-family : Segoe UI;"><i class="fa fa-stop-circle fa-fw"></i> Sign Out</a>
                         </li>
                     </ul>
