--- a/public/locadmin/templates/corporate-view.html
+++ b/public/locadmin/templates/corporate-view.html
@@ -1,1 +1,10 @@
-<h1>Contacts View</h1>
+<md-content layout="column">
+  <md-card>
+    <md-card-title>
+      <md-card-title-text>
+        <span class="md-headline">{{company.name}}</span>
+        <span class="md-subhead">{{company.address}}</span>
+      </md-card-title-text>
+    </md-card-title>
+  </md-card>
+</md-content>
