--- a/public/locadmin/templates/corporate.html
+++ b/public/locadmin/templates/corporate.html
@@ -8,7 +8,7 @@
     </md-card-title>
     <md-card-actions layout="row" layout-align="end center">
       <md-button >Call</md-button>
-      <md-button ng-href="#/home/corporate/{{$index}}">View</md-button>
+      <md-button ng-href="#/home/corporate/{{company._id}}">View</md-button>
       <md-button>Remove</md-button>
     </md-card-actions>
   </md-card>
