--- a/public/admin/templates/addLocation.html
+++ b/public/admin/templates/addLocation.html
@@ -86,9 +86,15 @@
 								      </div>
 								    </div>
 								    <div class="form-group">
-								      <label class="control-label col-sm-2" for="pwd">Number of slots:</label>
+								      <label class="control-label col-sm-2" for="pwd">Number of bike slots:</label>
 								      <div class="col-sm-2">
-								        <input type="number" class="form-control" placeholder="10" ng-model="newLocation.numberOfSlots">
+								        <input type="number" class="form-control" placeholder="10" ng-model="newLocation.numberOfSlots.two">
+								      </div>
+								    </div>
+                    <div class="form-group">
+								      <label class="control-label col-sm-2" for="pwd">Number of car slots:</label>
+								      <div class="col-sm-2">
+								        <input type="number" class="form-control" placeholder="10" ng-model="newLocation.numberOfSlots.four">
 								      </div>
 								    </div>
 								    <div class="form-group">
