--- a/public/locadmin/templates/home.html
+++ b/public/locadmin/templates/home.html
@@ -19,7 +19,7 @@
     <section layout="row" flex>
       <md-sidenav class="md-sidenav-left" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
         <md-toolbar class="md-hue-2">
-          <h2 class="md-toolbar-tools"></h2>
+          <h2 class="md-toolbar-tools">Welcome {{user.name}}</h2>
         </md-toolbar>
         <md-content>
           <md-list flex>
