--- a/public/locadmin/templates/profile.html
+++ b/public/locadmin/templates/profile.html
@@ -59,12 +59,12 @@
           <md-input-container flex="50">
             <label>No of slots</label>
             <md-icon md-svg-src="icons/ic_directions_bike_black_24px.svg"></md-icon>
-            <input type="number" ng-model="manage.slots.twowheeler">
+            <input type="number" ng-model="manage.number_of_slot.two">
           </md-input-container>
           <md-input-container flex="50">
             <label>No of slots</label>
             <md-icon md-svg-src="icons/ic_directions_car_black_24px.svg"></md-icon>
-            <input type="number" ng-model="manage.slots.fourwheeler">
+            <input type="number" ng-model="manage.number_of_slot.four">
           </md-input-container>
         </div>
         <div layout="row">
