--- a/public/locadmin/templates/main.html
+++ b/public/locadmin/templates/main.html
@@ -1,5 +1,5 @@
 <md-content layout-padding>
-  <h3>Parking: {{user.location_id.name}}</h3>
+  <h3>{{user.location_id.name}}</h3>
   <md-card>
     <md-card-title>
       <md-card-title-text>
