--- a/public/locadmin/templates/main.html
+++ b/public/locadmin/templates/main.html
@@ -16,8 +16,9 @@
         <span class="md-headline">Today's Stats</span>
       </md-card-title-text>
     </md-card-title>
-    <md-card-content layout="row">
+    <md-card-content layout="column">
       <h2>Total Earnings: Nil</h2>
+      <h3>Total Occupancy: Nil</h3>
     </md-card-content>
   </md-card>
 </md-content>
