--- a/public/locadmin/templates/booking.html
+++ b/public/locadmin/templates/booking.html
@@ -14,12 +14,12 @@
               <md-datepicker ng-model="booking.date" md-placeholder="Enter Date"></md-datepicker>
             </div>
           </div>
-          <div layout="row" ng-show="booking.range == 'Range'">
-            <div flex="50">
+          <div layout="column" ng-show="booking.range == 'Range'">
+            <div>
               <h4>Start Date</h4>
               <md-datepicker md-max-date="booking.daterange.enddate" ng-model="booking.daterange.startdate" md-placeholder="Enter Date"></md-datepicker>
             </div>
-            <div flex="50">
+            <div>
               <h4>End Date</h4>
               <md-datepicker md-min-date="booking.daterange.startdate" ng-model="booking.daterange.enddate" md-placeholder="Enter Date"></md-datepicker>
             </div>
