--- a/public/locadmin/templates/modal/addCorporateBooking.html
+++ b/public/locadmin/templates/modal/addCorporateBooking.html
@@ -29,12 +29,12 @@
               <input type="number" ng-model="corporate.slots.four">
             </md-input-container>
           </div>
-          <div layout="row">
-            <div flex="50">
+          <div layout="column">
+            <div>
               <h4>Start Date</h4>
               <md-datepicker md-max-date="corporate.daterange.enddate" ng-model="corporate.daterange.startdate" md-placeholder="Enter Date" required></md-datepicker>
             </div>
-            <div flex="50">
+            <div>
               <h4>End Date</h4>
               <md-datepicker md-min-date="corporate.daterange.startdate" ng-model="corporate.daterange.enddate" md-placeholder="Enter Date"></md-datepicker>
             </div>
