--- a/public/locadmin/templates/modal/addMonthlyBooking.html
+++ b/public/locadmin/templates/modal/addMonthlyBooking.html
@@ -42,12 +42,12 @@
               <div ng-message="required">This is required</div>
             </div>
           </md-input-container>
-          <div layout="row">
-            <div flex="50">
+          <div layout="column">
+            <div>
               <h4>Start Date</h4>
               <md-datepicker md-max-date="customer.daterange.enddate" ng-model="customer.daterange.startdate" md-placeholder="Enter Date" required></md-datepicker>
             </div>
-            <div flex="50">
+            <div>
               <h4>End Date</h4>
               <md-datepicker md-min-date="customer.daterange.startdate" ng-model="customer.daterange.enddate" md-placeholder="Enter Date"></md-datepicker>
             </div>
