--- a/public/locadmin/templates/home.html
+++ b/public/locadmin/templates/home.html
@@ -43,6 +43,11 @@
               <p>Corporate Users</p>
             </md-list-item>
             <md-divider ></md-divider>
+            <md-divider ></md-divider>
+            <md-list-item ng-click="navigate('logout')">
+              <p>Logout</p>
+            </md-list-item>
+            <md-divider ></md-divider>
           </md-list>
         </md-content>
       </md-sidenav>
