--- a/public/locadmin/templates/profile.html
+++ b/public/locadmin/templates/profile.html
@@ -80,7 +80,7 @@
           </md-input-container>
         </div>
         <div layout="row">
-          <md-button flex type="submit" class="md-raised md-primary">Update</md-button>
+          <md-button flex type="button" class="md-raised md-primary" ng-click="updateManage()">Update</md-button>
         </div>
       </md-content>
     </md-tab>
